fix: fixed header font size issue on mobile screens

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -5,10 +5,9 @@
   @extend .shadow;
   background-color: var(--clr-elem);
   padding: 1em 4em;
-  
 
   #{&}__heading {
-    font-size: clamp(1.2em, 3vmin + 0.3em, 2em);
+    font-size: clamp(1em, 3vmin + 0.3em, 2em);
   }
 
   #{&}__theme-switcher {
